--- a/index.html
+++ b/index.html
@@ -3,178 +3,222 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>화성시 & 평택시 기온 예보</title>
+  <title>화성시 & 평택시 체감온도 예보</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Arial', sans-serif;
       text-align: center;
-      padding: 30px;
+      padding: 20px;
+      background-color: #F0F8FF;
     }
     .chart-row {
       display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 40px;
-      margin-bottom: 60px;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+      margin-bottom: 20px;
     }
     canvas {
-      max-width: 300px;
+      max-width: 130px;
+      max-height: 130px;
+      width: 100%;
+      height: auto;
     }
-    h2 {
-      margin-top: 40px;
+    .chart-row div {
+      max-width: 90vw;
+      word-break: keep-all;
+      font-size: 16px;
+      line-height: 1.5;
+    }
+    select {
+      border-radius: 4px;
+      border: 2px solid #fff;
+      width: 120px;
+      height: 35px;
+      margin: 5px;
     }
   </style>
 </head>
 <body>
-  <h1>🌡 화성시 & 평택시 기온 및 체감온도 예보 (내일)</h1>
-  <div id="dateDisplay">📅 기준일: 불러오는 중...</div>
-  <button onclick="loadBoth()">예보 불러오기</button>
+<link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+<h1 style="font-size: 30px; font-family: 'Jua', sans-serif;">🌡내일 시간대별 체감온도 예보</h1>
+<div id="dateDisplay" style="margin: 8px 0;">불러오는 중...</div>
 
-  <h2>🔵 화성시 예보</h2>
-  <div class="chart-row">
-    <canvas id="tempHwaseong"></canvas>
+<div>
+  <img src="location.png" width="20px" style="vertical-align: middle;"/>
+  <select name="locationS" id="locationS" onchange="selectS(this.value);">
+    <option value="hwaseong">화성시</option>
+    <option value="pyeongtaek">평택시</option>
+    <option value="seoul">서울시</option>
+  </select>
+  <select name="locationD_H" id="locationD_H" onchange="selectD(this.value);"></select>
+  <select name="locationD_P" id="locationD_P" onchange="selectD(this.value);"></select>
+</div>
+
+<img src="범례.png" style="margin-top: 20px; max-width: 100%; height: auto;">
+
+<div class="chart-row">
+  <div>
     <canvas id="feelsHwaseong"></canvas>
+    <div>
+      ※ <strong>일 최고체감온도</strong>는 시간대별 체감온도보다 더 높겠으니,<br>
+      단계별 적극적인 대비가 필요합니다.<br>
+      <strong>[주의]</strong> 야외작업은 가급적 자제하시기 바랍니다.<br>
+      <strong>[경고]</strong> 야외작업은 피하시기 바랍니다.<br>
+      <strong>[위험]</strong> 야외작업은 매우 위험합니다.
+    </div>
   </div>
+</div>
 
-  <h2>🔴 평택시 예보</h2>
-  <div class="chart-row">
-    <canvas id="tempPyeongtaek"></canvas>
-    <canvas id="feelsPyeongtaek"></canvas>
-  </div>
+<div id="dateDisplay" style="text-align: center;"><img src="ci.png" width="100px"/></div>
 
-  <script>
-    const API_KEY = "4WbcPl8cpZjq8VXOePfsXjYGid7SRm5olpV5s6WVU2qwe6cuzQCFIwqjhf45FV1x0fEtTkZnwFEoLZSG%2B69j6g%3D%3D";
-    const API_URL = "https://apis.data.go.kr/1360000/VilageFcstInfoService_2.0/getVilageFcst";
+<script>
+const API_KEY = "4WbcPl8cpZjq8VXOePfsXjYGid7SRm5olpV5s6WVU2qwe6cuzQCFIwqjhf45FV1x0fEtTkZnwFEoLZSG%2B69j6g%3D%3D";
+const API_URL = "https://apis.data.go.kr/1360000/VilageFcstInfoService_2.0/getVilageFcst";
 
-    const today = new Date();
-    const tomorrow = new Date();
-    tomorrow.setDate(today.getDate() + 1);
+const today = new Date();
+const tomorrow = new Date();
+tomorrow.setDate(today.getDate() + 1);
 
-    const baseDate = today.toISOString().slice(0, 10).replace(/-/g, "");
-    const targetFcstDate = tomorrow.toISOString().slice(0, 10).replace(/-/g, "");
+const baseDate = today.toISOString().slice(0, 10).replace(/-/g, "");
+const targetFcstDate = tomorrow.toISOString().slice(0, 10).replace(/-/g, "");
+const tomorrowDate = targetFcstDate;
 
-    document.getElementById("dateDisplay").innerText = `📅 기준일: ${baseDate}, 예보일: ${targetFcstDate}`;
+document.getElementById("dateDisplay").innerText = baseDate.substr(4, 2) + '월' + baseDate.substr(6, 2) + '일 17시 발표';
 
-    async function fetchForecast(nx, ny) {
-      const url = `${API_URL}?serviceKey=${API_KEY}&numOfRows=1000&pageNo=1&dataType=JSON&base_date=${baseDate}&base_time=0500&nx=${nx}&ny=${ny}`;
-      const response = await fetch(url);
-      const data = await response.json();
-      const items = data.response.body.items.item;
+window.onload = function() {
+  document.getElementById('locationD_P').style.display = "none";
+  document.getElementById('locationD_H').style.display = "inline-block";
+  loadBoth(57, 119);
+}
 
-      let temps = new Map();
-      let humids = new Map();
+function selectS(loS) {
+  if (loS == "hwaseong") {
+    document.getElementById('locationD_H').style.display = "inline-block";
+    document.getElementById('locationD_P').style.display = "none";
+    loadBoth(57, 119);
+  } else if (loS == "pyeongtaek") {
+    document.getElementById('locationD_H').style.display = "none";
+    document.getElementById('locationD_P').style.display = "inline-block";
+    loadBoth(62, 114);
+  } else if (loS == "seoul") {
+    document.getElementById('locationD_H').style.display = "none";
+    document.getElementById('locationD_P').style.display = "none";
+    clearChart();
+    loadBoth(60, 127);
+  }
+}
 
-      items.forEach(item => {
-        if (item.fcstDate !== targetFcstDate) return;
-        const time = parseInt(item.fcstTime);
-        if (time >= 800 && time <= 2000) {
-          if (item.category === "TMP") temps.set(time, parseFloat(item.fcstValue));
-          if (item.category === "REH") humids.set(time, parseFloat(item.fcstValue));
-        }
-      });
+function selectD(loD) {
+  loadBoth(loD.split("_")[0], loD.split("_")[1]);
+}
 
-      const times = [];
-      const tempValues = [];
-      const humidValues = [];
+function clearChart() {
+  const canvas = document.getElementById("feelsHwaseong");
+  if (canvas && Chart.getChart(canvas)) {
+    Chart.getChart(canvas).destroy();
+  }
+  const ctx = canvas.getContext("2d");
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
+}
 
-      for (let t = 800; t <= 2000; t += 100) {
-        if (temps.has(t) && humids.has(t)) {
-          times.push(t.toString().padStart(4, "0"));
-          tempValues.push(temps.get(t));
-          humidValues.push(humids.get(t));
-        }
-      }
+async function fetchForecast(nx, ny) {
+  const url = `${API_URL}?serviceKey=${API_KEY}&numOfRows=1000&pageNo=1&dataType=JSON&base_date=${baseDate}&base_time=1700&nx=${nx}&ny=${ny}`;
+  const response = await fetch(url);
+  const data = await response.json();
+  const items = data.response.body.items.item;
 
-      const feelsLikeValues = tempValues.map((Ta, i) => {
-        const RH = humidValues[i];
-        const Tw = calculateWetBulbTemperature(Ta, RH);
-        return calculateFeelsLikeTemperature(Ta, Tw);
-      });
+  let temps = new Map();
+  let humids = new Map();
 
-      return { times, tempValues, feelsLikeValues };
+  items.forEach(item => {
+    if (item.fcstDate !== targetFcstDate) return;
+    const time = parseInt(item.fcstTime);
+    if (time >= 800 && time <= 2000) {
+      if (item.category === "TMP") temps.set(time, parseFloat(item.fcstValue));
+      if (item.category === "REH") humids.set(time, parseFloat(item.fcstValue));
     }
+  });
 
-    function calculateWetBulbTemperature(Ta, RH) {
-      return Ta * Math.atan(0.151977 * Math.pow(RH + 8.313659, 0.5))
-        + Math.atan(Ta + RH)
-        - Math.atan(RH - 1.67633)
-        + 0.00391838 * Math.pow(RH, 1.5) * Math.atan(0.023101 * RH)
-        - 4.686035;
+  const times = [];
+  const tempValues = [];
+  const humidValues = [];
+
+  for (let t = 800; t <= 2000; t += 100) {
+    if (temps.has(t) && humids.has(t)) {
+      times.push(t.toString().padStart(4, "0"));
+      tempValues.push(temps.get(t));
+      humidValues.push(humids.get(t));
     }
+  }
 
-    function calculateFeelsLikeTemperature(Ta, Tw) {
-      return -0.2442 + 0.55399 * Tw + 0.45535 * Ta
-        - 0.0022 * Tw * Tw + 0.00278 * Tw * Ta + 3.0;
+  const feelsLikeValues = tempValues.map((Ta, i) => {
+    const RH = humidValues[i];
+    const Tw = calculateWetBulbTemperature(Ta, RH);
+    return Math.round(calculateFeelsLikeTemperature(Ta, Tw));
+  });
+
+  return { times, tempValues, feelsLikeValues };
+}
+
+function calculateWetBulbTemperature(Ta, RH) {
+  return Ta * Math.atan(0.151977 * Math.pow(RH + 8.313659, 0.5))
+    + Math.atan(Ta + RH)
+    - Math.atan(RH - 1.67633)
+    + 0.00391838 * Math.pow(RH, 1.5) * Math.atan(0.023101 * RH)
+    - 4.686035;
+}
+
+function calculateFeelsLikeTemperature(Ta, Tw) {
+  return -0.2442 + 0.55399 * Tw + 0.45535 * Ta
+    - 0.0022 * Tw * Tw + 0.00278 * Tw * Ta + 3.0;
+}
+
+function getColor(temp) {
+  if (temp >= 35) return "#E0002B";
+  if (temp >= 33) return "#EF5D20";
+  if (temp >= 31) return "#FFCD12";
+  if (temp >= 29) return "#86E57F";
+  return "#D5D5D5";
+}
+
+function polarChart(ctxId, times, values, labelText) {
+  const canvas = document.getElementById(ctxId);
+  if (!canvas) return;
+  const ctx = canvas.getContext("2d");
+  if (Chart.getChart(ctxId)) Chart.getChart(ctxId).destroy();
+
+  const extendedTimes = [...times, ''];
+  const extendedValues = new Array(times.length).fill(1);
+  extendedValues.push(0.15);
+  const backgroundColors = values.map(getColor);
+  backgroundColors.push('rgba(0,0,0,0)');
+
+  return new Chart(ctx, {
+    type: "doughnut",
+    data: {
+      labels: extendedTimes,
+      datasets: [{
+        data: extendedValues,
+        backgroundColor: backgroundColors,
+        borderWidth: 1,
+        realValues: values
+      }]
+    },
+    options: {
+      responsive: true,
+      maintainAspectRatio: false,
+      cutout: "60%",
+      plugins: { legend: { display: false }, tooltip: { enabled: false } }
     }
+  });
+}
 
-    function getColor(temp) {
-      if (temp < 10) return "skyblue";
-      if (temp < 20) return "lightgreen";
-      if (temp < 28) return "khaki";
-      if (temp < 33) return "orange";
-      return "red";
-    }
-
-    function polarChart(ctxId, times, values) {
-      const ctx = document.getElementById(ctxId).getContext("2d");
-      if (Chart.getChart(ctxId)) Chart.getChart(ctxId).destroy();
-
-      const textPlugin = {
-        id: "textPlugin",
-        afterDraw(chart) {
-          const { ctx } = chart;
-          const meta = chart.getDatasetMeta(0);
-          ctx.save();
-          meta.data.forEach((arc, i) => {
-            const center = arc.tooltipPosition();
-            ctx.font = "bold 12px Arial";
-            ctx.fillStyle = "black";
-            ctx.textAlign = "center";
-            ctx.textBaseline = "middle";
-            ctx.fillText(times[i].slice(0, 2) + "시", center.x, center.y - 14);
-            ctx.fillText(Math.round(values[i]) + "℃", center.x, center.y + 4);
-          });
-          ctx.restore();
-        }
-      };
-
-      const sliceAngle = 360 / times.length;       // ✅ 각 조각의 각도
-      const degrees = 225 - (sliceAngle / 2);      // ✅ 조각 중심을 225도에 정렬
-      const rotation = degrees * Math.PI / 180;    // ✅ 라디안 변환
-
-      return new Chart(ctx, {
-        type: "doughnut",
-        data: {
-          labels: times,
-          datasets: [{
-            data: new Array(times.length).fill(1),
-            backgroundColor: values.map(getColor),
-            borderWidth: 1
-          }]
-        },
-        options: {
-          rotation: rotation,
-          cutout: "60%",
-          plugins: {
-            legend: { display: false },
-            tooltip: { enabled: false },
-            textPlugin
-          }
-        },
-        plugins: [textPlugin]
-      });
-    }
-
-    async function loadBoth() {
-      const hwaseong = await fetchForecast(55, 119);
-      const pyeongtaek = await fetchForecast(61, 114);
-
-      polarChart("tempHwaseong", hwaseong.times, hwaseong.tempValues);
-      polarChart("feelsHwaseong", hwaseong.times, hwaseong.feelsLikeValues);
-      polarChart("tempPyeongtaek", pyeongtaek.times, pyeongtaek.tempValues);
-      polarChart("feelsPyeongtaek", pyeongtaek.times, pyeongtaek.feelsLikeValues);
-    }
-  </script>
+async function loadBoth(lo, ca) {
+  const hwaseong = await fetchForecast(lo, ca);
+  polarChart("feelsHwaseong", hwaseong.times, hwaseong.feelsLikeValues, [parseInt(tomorrowDate.substr(4, 2), 10) + '/' + tomorrowDate.substr(6, 2), '체감온도']);
+}
+</script>
 </body>
 </html>
