--- a/index.html
+++ b/index.html
@@ -132,30 +132,30 @@ function polarChart(ctxId, times, values, labelText) {
   backgroundColors.push('rgba(0,0,0,0)');
 
   const textPlugin = {
-    id: "textPlugin",
-    afterDraw(chart) {
-      const { ctx } = chart;
-      const meta = chart.getDatasetMeta(0);
-      const realValues = chart.data.datasets[0].realValues;
-      ctx.save();
-      meta.data.forEach((arc, i) => {
-        const label = chart.data.labels[i];
-        if (!label || label === '') return;
-        const radius = arc.outerRadius + 45;
-        const angle = (arc.startAngle + arc.endAngle) / 2;
-        const x = chart.width / 2 + radius * Math.cos(angle);
-        const y = chart.height / 2 + radius * Math.sin(angle);
-        const hourOnly = label.slice(0, 2);
-        ctx.font = "bold 12px Arial";
-        ctx.fillStyle = "black";
-        ctx.textAlign = "center";
-        ctx.fillText(hourOnly + "시", x, y);
-        const innerCenter = arc.tooltipPosition();
-        ctx.fillText(Math.round(realValues[i]) + "℃", innerCenter.x, innerCenter.y + 4);
-      });
-      ctx.restore();
-    }
-  };
+  id: "textPlugin",
+  afterDraw(chart) {
+    const { ctx } = chart;
+    const meta = chart.getDatasetMeta(0);
+    const realValues = chart.data.datasets[0].realValues;
+    ctx.save();
+    meta.data.forEach((arc, i) => {
+      const label = chart.data.labels[i];
+      if (!label || label === '') return;
+      const radius = arc.outerRadius + 70;  // 외곽 텍스트 위치를 더 바깥으로
+      const angle = (arc.startAngle + arc.endAngle) / 2;
+      const x = chart.width / 2 + radius * Math.cos(angle);
+      const y = chart.height / 2 + radius * Math.sin(angle);
+      const hourOnly = label.slice(0, 2);
+      ctx.font = "bold 12px Arial";
+      ctx.fillStyle = "black";
+      ctx.textAlign = "center";
+      ctx.fillText(hourOnly + "시", x, y);
+      const innerCenter = arc.tooltipPosition();
+      ctx.fillText(Math.round(realValues[i]) + "℃", innerCenter.x, innerCenter.y + 4);
+    });
+    ctx.restore();
+  }
+};
 
   const centerPlugin = {
     id: 'centerPlugin',
