--- a/index.html
+++ b/index.html
@@ -185,6 +185,9 @@ function polarChart(ctxId, times, values, labelText) {
       }]
     },
   options: {
+    layout: {
+    padding: 30
+  },
       cutout: "50%",
             rotation: 235,
   radius: '90%', 
