--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
 </div>
 <div id="dateDisplay" style="margin: 8px 0;">불러오는 중...</div>
 <div class="chart-row">
-  <canvas id="feelsHwaseong"></canvas>
+
+  <canvas id="feelsHwaseong" width="400" height="400" style="max-width: 400px;"></canvas>
+
   <div>
     ※ <strong>일 최고체감온도</strong>는 시간대별 체감온도보다 더 높겠으니,<br>
     단계별 적극적인 대비가 필요합니다.<br>
