--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 <div id="dateDisplay" style="margin: 8px 0;">불러오는 중...</div>
 <div class="chart-row">
 
-  <canvas id="feelsHwaseong" width="500" height="500" style="max-width: 500px;"></canvas>
+<canvas id="feelsHwaseong" width="500" height="500" style="max-width: 90vw;"></canvas>
+
 
   <div>
     ※ <strong>일 최고체감온도</strong>는 시간대별 체감온도보다 더 높겠으니,<br>
