--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <div id="dateDisplay" style="margin: 8px 0;">불러오는 중...</div>
 <div class="chart-row">
 
-<canvas id="feelsHwaseong" width="500" height="500" style="max-width: 90vw;"></canvas>
+<canvas id="feelsHwaseong" width="600" height="600" style="max-width: 100%;"></canvas>
 
 
   <div>
