--- a/index.html
+++ b/index.html
@@ -49,10 +49,7 @@
 </div>
 <div id="dateDisplay" style="margin: 8px 0;">불러오는 중...</div>
 <div class="chart-row">
-
 <canvas id="feelsHwaseong" width="600" height="600" style="max-width: 100%;"></canvas>
-
-
   <div>
     ※ <strong>일 최고체감온도</strong>는 시간대별 체감온도보다 더 높겠으니,<br>
     단계별 적극적인 대비가 필요합니다.<br>
@@ -73,7 +70,7 @@ const tomorrowDate = targetFcstDate;
 document.getElementById("dateDisplay").innerText = baseDate.substr(4, 2) + '월' + baseDate.substr(6, 2) + '일 17시 발표';
 
 async function fetchForecast(nx, ny) {
-  const url = ${API_URL}?serviceKey=${API_KEY}&numOfRows=1000&pageNo=1&dataType=JSON&base_date=${baseDate}&base_time=1700&nx=${nx}&ny=${ny};
+  const url = `${API_URL}?serviceKey=${API_KEY}&numOfRows=1000&pageNo=1&dataType=JSON&base_date=${baseDate}&base_time=1700&nx=${nx}&ny=${ny}`;
   const response = await fetch(url);
   const data = await response.json();
   const items = data.response.body.items.item;
@@ -135,30 +132,30 @@ function polarChart(ctxId, times, values, labelText) {
   backgroundColors.push('rgba(0,0,0,0)');
 
   const textPlugin = {
-  id: "textPlugin",
-  afterDraw(chart) {
-    const { ctx } = chart;
-    const meta = chart.getDatasetMeta(0);
-    const realValues = chart.data.datasets[0].realValues;
-    ctx.save();
-    meta.data.forEach((arc, i) => {
-      const label = chart.data.labels[i];
-      if (!label || label === '') return;
-      const radius = arc.outerRadius + 20;  // 외곽 텍스트 위치를 더 바깥으로
-      const angle = (arc.startAngle + arc.endAngle) / 2;
-      const x = chart.width / 2 + radius * Math.cos(angle);
-      const y = chart.height / 2 + radius * Math.sin(angle);
-      const hourOnly = label.slice(0, 2);
-      ctx.font = "bold 12px Arial";
-      ctx.fillStyle = "black";
-      ctx.textAlign = "center";
-      ctx.fillText(hourOnly + "시", x, y);
-      const innerCenter = arc.tooltipPosition();
-      ctx.fillText(Math.round(realValues[i]) + "℃", innerCenter.x, innerCenter.y + 4);
-    });
-    ctx.restore();
-  }
-};
+    id: "textPlugin",
+    afterDraw(chart) {
+      const { ctx } = chart;
+      const meta = chart.getDatasetMeta(0);
+      const realValues = chart.data.datasets[0].realValues;
+      ctx.save();
+      meta.data.forEach((arc, i) => {
+        const label = chart.data.labels[i];
+        if (!label || label === '') return;
+        const radius = arc.outerRadius + 20;
+        const angle = (arc.startAngle + arc.endAngle) / 2;
+        const x = chart.width / 2 + radius * Math.cos(angle);
+        const y = chart.height / 2 + radius * Math.sin(angle);
+        const hourOnly = label.slice(0, 2);
+        ctx.font = "bold 12px Arial";
+        ctx.fillStyle = "black";
+        ctx.textAlign = "center";
+        ctx.fillText(hourOnly + "시", x, y);
+        const innerCenter = arc.tooltipPosition();
+        ctx.fillText(Math.round(realValues[i]) + "℃", innerCenter.x, innerCenter.y + 4);
+      });
+      ctx.restore();
+    }
+  };
 
   const centerPlugin = {
     id: 'centerPlugin',
