--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
       flex-direction: column;
       align-items: center;
       gap: 20px;
+      margin-top: 20px; 
       margin-bottom: 20px;
     }
     canvas {
-      max-width: 300px;
-      max-height: 300px;
+      max-width: 270px;
+      max-height: 270px;
       width: 100%;
       height: auto;
     }
