--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div id="dateDisplay" style="margin: 8px 0;">불러오는 중...</div>
 <div class="chart-row">
 <canvas id="feelsHwaseong" width="600" height="600" style="max-width: 100%;"></canvas>
-  <div>
+  <div style="text-align: left;">
     ※ <strong>일 최고체감온도</strong>는 시간대별 체감온도보다 더 높겠으니,<br>
     단계별 적극적인 대비가 필요합니다.<br>
     <strong>[주의]</strong> 야외작업은 가급적 자제하시기 바랍니다.<br>
