--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
   <div style="text-align: left;">
     ※ <strong>일 최고체감온도</strong>는 시간대별 체감온도보다 더 높겠으니,<br>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;단계별 적극적인 대비가 필요합니다.<br>
-    <strong>[주의]</strong> 야외작업은 가급적 자제하시기 바랍니다.<br>
-    <strong>[경고]</strong> 야외작업은 피하시기 바랍니다.<br>
-    <strong>[위험]</strong> 야외작업은 매우 위험합니다.
+   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <strong>[주의]</strong> 야외작업은 가급적 자제하시기 바랍니다.<br>
+   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <strong>[경고]</strong> 야외작업은 피하시기 바랍니다.<br>
+   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <strong>[위험]</strong> 야외작업은 매우 위험합니다.
   </div>
 </div>
 <script>
