--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
     <option value="62_114">평택시</option>
   </select>
 </div>
+<img src="범례.png" width="400" height="auto" style="margin-top: 20px;">
+  
 <div id="dateDisplay" style="margin: 8px 0;">불러오는 중...</div>
 <div class="chart-row">
 <canvas id="feelsHwaseong" width="600" height="600" style="max-width: 100%;"></canvas>
